test/types/range/lydia/badRange-string-stride.chpl
proc main() {
  for param i in 0..1 by "" {
    writeln(i);
  }
}
